--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "animate.css": "^3.7.2",
     "core-js": "^2.6.5",
+    "element-ui": "^2.9.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
     "vue": "^2.6.10",
+    "vue-awesome-swiper": "^3.1.3",
+    "vue-parallax-js": "^0.2.3",
+    "vue-parallaxy": "^1.1.1",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
