--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "animate.css": "^3.7.2",
     "core-js": "^2.6.5",
     "element-ui": "^2.9.0",
+    "jquery": "^3.4.1",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
     "vue": "^2.6.10",
