--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sass-loader": "^7.1.0",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-i18n": "^8.11.2",
     "vue-parallax-js": "^0.2.3",
     "vue-parallaxy": "^1.1.1",
     "vue-router": "^3.0.3",
